Migrating towards consolidated use of ExpressionComputation.